name:                stacker
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Brad Parker
maintainer:          hi@bradparker.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable stacker
  main-is:
    Main.hs
  build-depends:
    base >=4.10 && <4.11,
    JuicyPixels
  hs-source-dirs:
    src
  default-language:
    Haskell2010
